<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_onekeydiagnosos"
            android:icon="@drawable/ic_diagnosis"
            android:title="@string/onekeydiagnosos" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_measureandset"
            android:icon="@drawable/ic_measure"
            android:title="@string/measureandset" />
        <item
            android:id="@+id/nav_myinformation"
            android:icon="@drawable/ic_mine"
            android:title="@string/myinformation" />
    </group>

</menu>
