<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_paired_devices"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#666"
                android:paddingLeft="5dp"
                android:text="@string/title_paired_devices"
                android:textColor="#fff"
                android:visibility="gone" />

            <ListView
                android:id="@+id/paired_devices"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollingCache="true"
                android:stackFromBottom="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_new_devices"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#666"
                android:paddingLeft="5dp"
                android:text="@string/title_other_devices"
                android:textColor="#fff"
                android:visibility="gone" />

            <ListView
                android:id="@+id/new_devices"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:scrollingCache="true"
                android:stackFromBottom="true" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_scan" />

        <Button
            android:id="@+id/deviceListActivityCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>